--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,6 +55,7 @@
   "ITEM_CREATE_CHOOSE_IMAGE": "Add Image",
 
   "ITEM_NAME_PLACEHOLDER": "Name",
+  "ITEM_LASTNAME_PLACEHOLDER": "Last name",
   "ITEM_ABOUT_PLACEHOLDER": "About",
 
   "DONE_BUTTON": "Done",
